# dawplr

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  Dawplr.cpp  Dawplr.h  EditorAreaLeft.cpp  EditorAreaLeft.h  Listeners.h  TrackBody.h  main.cpp
src/Components/: CustomFileDialog.cpp  CustomFileDialog.h  EditorAreaLeftBottomControls.cpp  EditorAreaLeftBottomControls.h  HMeter.cpp  HMeter.h  HSash.cpp  HSash.h  HScroll.cpp  HScroll.h  HScroller.cpp  HScroller.h  Region.cpp  RegionArea.cpp  RegionArea.h  SyncedScrollWindow.h  TrackBody.cpp  TrackBody.h  TrackHeader.cpp  TrackHeader.h  TrackLane.cpp  TrackLane.h  TrackLanesContainer.cpp  VSash.cpp  VSash.h  VScroll.cpp  VScroll.h  VScroller.cpp  VScroller.h
src/Core/: Constants.h  Region.cpp  Region.h  SessionManager.cpp  SessionManager.h  Track.cpp  Track.h  TrackManager.cpp  TrackManager.h
src/Events/: TrackBodyHeightChangedEvent.cpp  TrackBodyHeightChangedEvent.h  TrackHeaderHeightChangedEvent.cpp  TrackHeaderHeightChangedEvent.h
src/Layout/: BottomPanel.cpp  BottomPanel.h  EditorArea.cpp  EditorArea.h  EditorAreaLeft.cpp  EditorAreaLeft.h  EditorAreaRight.cpp  EditorAreaRight.h  EditorContainer.cpp  EditorContainer.h  EditorView.cpp  EditorView.h  InspectorView.cpp  InspectorView.h  MainHorizontalSplitter.cpp  MainHorizontalSplitter.h  MainMenu.cpp  MainMenu.h  MainVerticalSplitter.cpp  MainVerticalSplitter.h  MainWindow.cpp  MainWindow.h  TrackBody.cpp  TrackHeaderArea.cpp  TrackHeaderArea.h  TrackHeaders.cpp  TrackHeaders.h  TrackLanes.cpp  TrackLanes.h  TrackLanesContainer.cpp  TrackLanesContainer.h  TransportBar.cpp  TransportBar.h
